2002-12-08  Bill Bumgarner  <bbum@codefab.com>
    * Examples/WebServicesTool: Added a lot of inline documentation to the
          python code.
    * BUGS: Removed some of the already fixed bugs.  Removed legacy
          information that is no longer relevant.  Added new bugs. Added
          information to existing bugs.
	* FIXME: Edited to bring some stuff up to date.
	* Lib/Foundation/test/test_nsautoreleasepool.py (suite): Added
	  unittest to test NSAutoreleasePool bug workaround.
	* Modules/Cocoa/NSAutoreleasePoolSupport.m: Added bogus push/pop
	  workaround for NSAutoreleasePool bug.
	* INSTALL: Rewrote a good chunk of the text.  Removed references
	  to NeXTSTEP.hange
	* Examples/HelloWorld.py: Reworked example a bit to match modern
	  usage.
	  - References classes through AppKit/Foundation, not by looking up
        	    directly. 
	  - Added an action method to Hello button so it does something
	  even when sound is turned off.
	* Modules/objc/module.m: Fixed import in module.m;  wrong case.

2002-12-01  Bill Bumgarner  <bbum@codefab.com>
	* cleaned up nsobject unittests slightly [had cruft from nsarray]
	* added NSAutoreleasePool test

2002-11-27  Bill Bumgarner  <bbum@codefab.com>
	* make_distrib.py automatically removes CVS directories and
	.DS_Store files from tree before packaging.

2002-11-25 Ronald Oussoren <oussoren@cistron.nl>
	* Examples/{TableModel, CurrencyConverter, Todo}:
	  - Use NibClassBuilder module
	  - Use bundlebuilder module
	* Lib/objc/builder.py: Remove, no longer used

2002-11-22 Ronald Oussoren <oussoren@cistron.nl>
	* Examples/TableModel2/main.m: Set PYTHONPATH in the environment of
	  the child
	* Import bundlebuilder.py and plistlib.py from MacPython
	* Remove Tools/mknibwrapper: It is no longer needed
	* Added scripts/nibclassbuilder, as suggested by Just van Rossum

2002-11-20 Ronald Oussoren <oussoren@cistron.nl>
	Translated a number of names to a more Cocoa like syntax:
	* objc.lookup_class -> objc.lookUpClass